# local_link

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  local.cmake  local_template.cmake  vcpkg.json
src/: CMakeLists.txt  app.cpp
src/data/: CMakeLists.txt  call_manager.cpp  call_manager.h  connection.cpp  connection.h  model.h  network_api.cpp  network_api.h  network_message.h  tcp_server_adapter.cpp  tcp_server_adapter.h  tcp_socket_adapter.cpp  tcp_socket_adapter.h  udp_socket_adapter.cpp  user.h  user_repository.cpp  user_repository.h  user_scanner.cpp  user_scanner.h  user_status_manager.cpp  user_status_manager.h  video_recorder.cpp  video_recorder.h
src/data/network/: network_api.cpp  network_api.h  network_message.h  tcp_server_adapter.cpp  tcp_server_adapter.h  tcp_socket_adapter.cpp  tcp_socket_adapter.h  udp_socket_adapter.cpp  udp_socket_adapter.h
src/ui/: CMakeLists.txt  UsersListModel.cpp  UsersListModel.h  call_model.cpp  call_model.h  users_list_model.cpp  users_list_model.h  video_frame_item.cpp  video_frame_item.h  video_frame_painted_item.cpp  video_frame_painted_item.h  video_model.cpp  video_model.h
src/ui/qml/: call.qml  home.qml  root.qml
test/unit/data/: CMakeLists.txt  network_api_test.cpp
test/unit/data/mocks/: network_api_mock.cpp  network_api_mock.h  udp_socket_adapter_mock.cpp  udp_socket_adapter_mock.h  udp_socket_mock.cpp  udp_socket_mock.h
test/unit/data/network/: network_api_test.cpp
test/unit/data/test_util/: network_api_mock.h  tcp_server_adapter_mock.cpp  tcp_server_adapter_mock.h  tcp_socket_adapter_mock.cpp  tcp_socket_adapter_mock.h  udp_socket_adapter_mock.h
